# anno-doumi

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
anno_doumi/agent/: Dockerfile  main.py  requirements.txt
anno_doumi/agent/command/: __init__.py  command_agent.py  instruction.txt  instruction_v2.txt
anno_doumi/agent/stt/: __init__.py  stt_agent.py
anno_doumi/agent/voice/: voice_listener.py
anno_doumi/server/: Dockerfile  app.py
